syntax = "proto3";

package classroom;

option go_package = "github.com/calmato/shs-web/api/proto/classroom";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

import "classroom/common.proto";
import "classroom/subject.proto";
import "classroom/teacher_subject.proto";

service ClassroomService {
  rpc ListSubjects(ListSubjectsRequest) returns (ListSubjectsResponse);
  rpc MultiGetSubjects(MultiGetSubjectsRequest) returns (MultiGetSubjectsResponse);
  rpc GetSubject(GetSubjectRequest) returns (GetSubjectResponse);
  rpc MultiGetTeacherSubjects(MultiGetTeacherSubjectsRequest) returns (MultiGetTeacherSubjectsResponse);
  rpc GetTeacherSubject(GetTeacherSubjectRequest) returns (GetTeacherSubjectResponse);
}

message ListSubjectsRequest {
  SchoolType school_type = 1 [(validate.rules).enum = { defined_only: true }];
}

message ListSubjectsResponse {
  repeated Subject subjects = 1;
  int64            total    = 2;
}

message MultiGetSubjectsRequest {
  repeated int64 ids = 1 [(validate.rules).repeated = { min_items: 1, unique: true, items: { int64: { gt: 0 }}}];
}

message MultiGetSubjectsResponse {
  repeated Subject subjects = 1;
}

message GetSubjectRequest {
  int64 id = 1 [(validate.rules).int64 = { gt: 0 }];
}

message GetSubjectResponse {
  Subject subject = 1;
}

message MultiGetTeacherSubjectsRequest {
  repeated string teacher_ids = 1 [(validate.rules).repeated = { min_items: 1, unique: true, items: { string: { min_len: 1 }}}];
}

message MultiGetTeacherSubjectsResponse {
  repeated TeacherSubject teacher_subjects = 1;
  repeated Subject        subjects = 2;
}

message GetTeacherSubjectRequest {
  string teacher_id = 1 [(validate.rules).string = { min_len: 1 }];
}

message GetTeacherSubjectResponse {
  TeacherSubject   teacher_subject = 1;
  repeated Subject subjects        = 2;
}
